[package]
name = "altaware"
description = "Post-processing of alt-aware alignment"
version = "0.1.0"
authors = ["John Didion <github@didion.net>"]
edition = "2018"

[dependencies]
clap = "2.33"
lazy_static = "1.4.0"
regex = "1.5"
rust-htslib = "0.38.2"
# transitive dep from rust-htslib
bio-types = ">=0.9"
structopt = "*"